--- a/css/styles.css
+++ b/css/styles.css
@@ -346,9 +346,11 @@ body {
 }
 
 .container {
-  width: 60%;
+  max-width: 1024px;
   margin: auto;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #search {
@@ -358,6 +360,13 @@ body {
   margin: 24px;
   border: 2px solid #ddd;
   border-radius: 5px;
+}
+
+.thumbnail {
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 200px);
+  grid-gap: 20px;
 }
 
 /*# sourceMappingURL=styles.css.map */
