--- a/css/styles.css
+++ b/css/styles.css
@@ -347,6 +347,7 @@ body {
 
 .container {
   max-width: 1024px;
+  padding: 20px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -362,11 +363,12 @@ body {
   border-radius: 5px;
 }
 
-.thumbnail {
+.gallery {
   max-width: 100%;
+  padding: 20px;
   display: grid;
   grid-template-columns: repeat(auto-fill, 200px);
-  grid-gap: 20px;
+  grid-gap: 40px;
 }
 
 /*# sourceMappingURL=styles.css.map */
