--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,6 +11,7 @@ body {
 
 .container {
     max-width: 1024px;
+    padding: 20px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -26,9 +27,10 @@ body {
     border-radius: 5px;
 }
 
-.thumbnail {
+.gallery {
     max-width: 100%;
+    padding: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fill, 200px);
-    grid-gap: 20px;
+    grid-gap: 40px;
 }
