added javascript for search field

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,4 @@
-@import 'base/index';
-
+@import 'base/normalize';
 
 * {
     box-sizing: border-box;
@@ -25,6 +24,14 @@ body {
     margin: 24px;
     border: 2px solid #ddd;
     border-radius: 5px;
+    
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance:none;
 }
 
 .gallery {
