--- a/css/styles.css
+++ b/css/styles.css
@@ -363,6 +363,13 @@ body {
   border-radius: 5px;
 }
 
+input[type=search]::-webkit-search-decoration,
+input[type=search]::-webkit-search-cancel-button,
+input[type=search]::-webkit-search-results-button,
+input[type=search]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+}
+
 .gallery {
   max-width: 100%;
   padding: 20px;
